source/blender/blenkernel/BKE_mesh.h
@@ -406,6 +406,7 @@ enum {
 	BKE_MESH_BATCH_DIRTY_ALL = 0,
 	BKE_MESH_BATCH_DIRTY_SELECT,
 	BKE_MESH_BATCH_DIRTY_NOCHECK,
+	BKE_MESH_BATCH_DIRTY_SHADING,
 };
 void BKE_mesh_batch_cache_dirty(struct Mesh *me, int mode);
 void BKE_mesh_batch_cache_free(struct Mesh *me);
