source/blender/depsgraph/intern/depsgraph_type_defines.cc
@@ -129,6 +129,8 @@ static const char *stringify_opcode(eDepsOperation_Code opcode)
 
 		STRINGIFY_OPCODE(COPY_ON_WRITE);
 
+		STRINGIFY_OPCODE(SHADING);
+
 		case DEG_NUM_OPCODES: return "SpecialCase";
 #undef STRINGIFY_OPCODE
 	}
